--- a/posts/2015-12-24.md
+++ b/posts/2015-12-24.md
@@ -136,11 +136,11 @@ Well, what's the problem?
 
 The problem is that when you take an algorithm whose stable states are based on a careful balancing act (labels are initially distinct, ties between "most frequent" are broken randomly), you risk making the system's scheduler into a king-maker.
 
-Let's take a simple update rule with good performance: if a node acquires a new label, re-evaluate its peers. That is so smart! What happens when we have a label that has started to take over a community? Why, it floods through the community and all nodes therein gets the same label. That is the point, right?
+Let's take a simple update rule with good performance: if a node acquires a new label, re-evaluate its peers. That is so smart, and legit because asynchrony! What happens when we have a label that has started to take over a community? Why, it floods through the community and all nodes therein gets the same label. That is the point, right?
 
-It's great, except that the immediately adjacent community, which hasn't had a chance to run yet, gets presented with just a few edges to the unified community, and is completely overwhelmed. Had the adjacenty community also had a chance to perform about the same amount of work, it could plausibly have developed a consensus on a different label, and held out as a distinct community. 
+It's great, except that the immediately adjacent community, which hasn't had a chance to run yet and has a bunch of random labels, gets presented with just a few edges to the unified community and is completely overwhelmed. Had the adjacenty community also had a chance to perform about the same amount of work, it could plausibly have developed a consensus on a different label, and held out as a distinct community. 
 
-At this rate, the smart asynchronous update rule (that I just made up, not one that GRACE advocates) can easily give the whole graph the same color, whereas a more measured evaluation would have teased out actual distinct communities, like it was supposed to.
+At this rate, the smart asynchronous update rule (that I just made up, not one that GRACE advocates) can easily give the whole graph the same color, whereas a more measured evaluation would have teased out actual distinct communities, like it was supposed to. Actually, who knows what it is going to do?
 
 Although asynchronous execution can go fast, if your algorithm doesn't actually compute a specific function of the input, you really should check the quality of the result. Or, just use the trick up above with graph coloring and compute the exacty same answer as sequential execution would (what the authors of the algorithm *actually* say performs well), in parallel, with synchronization.
 
@@ -150,7 +150,7 @@ Remember label propagation for connected components? Let's talk about that now.
 
 Label propagation for connected components is an algorithm in which each graph node has a label (initially its own name) and each node repeatedly exchanges the smallest label it has yet seen with each of its neighbors. After enough iterations, everyone in the same connected component has the same label.
 
-This algorithm has some issues. Mainly, nodes with large labels spend some amount of time bickering about whose large label is the best, before eventually receiving the smallest label in their component and shutting up. These graphs have small diameter so it doesn't take long for the smallest label to reach them, they just fill the air with pointless blather that keeps workers busy.
+This algorithm has some issues. Mainly, nodes with large labels spend some amount of time bickering about whose large label is the best, before eventually receiving the smallest label in their component and shutting up. These graphs have small diameter so it wouldn't take long for the smallest label to reach them, but they fill the air with pointless blather that keeps workers busy and the small labels buried in some message queue.
 
 What would have been smarter is to have only the smallest label in each component announce its name, and flood its component. This would be smarter, but it sounds like we would already have to have solved the graph connectivity problem.
 
@@ -158,13 +158,13 @@ Fortunately, there is a neat trick that does mostly the same thing. If you rando
 
 Or. Or!!! Or we could just do things asynchronously. Like, circulate labels asynchronously and mostly hope that small labels win out over large labels and then have a party. This is roughly what the [PrIter paper](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.353.4772&rep=rep1&type=pdf) did back in 2011. At the time, the PrIter paper was a great example of doing something new and different that other systems didn't do; it's not cited nearly as much as much less interesting papers. 
 
-We totally stole that idea when we did the above algorithm in Naiad. I mean, we cited them and called it "prioritized iteration", but from my point of view it was all them. Here is a plot of the difference between differential dataflow doing un-prioritized and a prioritized iteration (the times per iteration are aggregated across batches):
+We totally stole that idea when we did the above algorithm in Naiad. I mean, we cited them and called it "prioritized iteration", but from my point of view it was all them. Here is a plot of the difference un-prioritized (`Incremental`) and a prioritized (`Prioritized`) iteration as a function of the round of flooding (the times per iteration are aggregated across batches):
 
 ![prioritization](https://github.com/frankmcsherry/blog/blob/master/assets/review/prioritization.png)
 
-So, we thought this was progress. You have an improved form of an algorithm that still distributes and is just better. People will probably start using it,right?
+So, we thought this was progress. You have an improved form of an algorithm that still distributes and is just better. People will probably start using it, right?
 
-Nope. 
+Nope. As far as I can tell, no one.
 
 As best as I can see, there are few papers recently re-discovering that asynchrony works well for label propagation, but only [Wang et al](http://homes.cs.washington.edu/~magda/papers/wang-vldb15.pdf) have started to look into *why*. Their conclusion seems to be that when you compare asynchronous execution and synchronous (but non-prioritized) execution, 
 
@@ -176,7 +176,7 @@ The analysis makes sense, that one of their rules circulates smaller ids faster 
 
 Why not just make it part of the program, rather than a vagary of the scheduler? Their asynchronous execution got about 2x over non-prioritized synchronous, whereas synchronous prioritized execution got us (a totally different system, to be clear) about 5x end-to-end. 
 
-It seems a bit early to call it in favor of asynchronous systems yet (which is actually one of Wang et al's points, too).
+It seems a bit early to call it in favor of asynchronous systems yet (which is actually one of Wang et al's conclusions, too).
 
 Not to mention that the prioritized version has a clear functional definition that allows us to write it in differential dataflow, and incrementally update it (something I think the async systems are really bad at).
 
@@ -212,8 +212,8 @@ Let's be clear, all the research to be published in 2016 has already been done a
 
 As a fun exercise, perhaps you could write down what you think would constitute progress?
 
-**Goal 1**: I want to see algorithms I don't expect to see. I want to see computations and approaches that are suprising and new and thought provoking. I want more papers where my conclusion is "I *need* to try that out in timely" rather than "I already wrote that in timely (insert your (2nd) favorite system here)".
+**Goal 1**: I want to see algorithms I don't expect to see. I want to see computations and approaches that are suprising and new and thought provoking. I want more papers where my conclusion is "I *need* to try that out in timely" rather than "I already wrote that in [timely / your 2nd favorite system]".
 
 **Goal 2**: I want people to explain their papers as if they were scientists rather than salesmen. I don't care *that* your system goes 10x faster than some other system, I care about *why* it goes 10x faster. I want to know if there is anything to learn here other than "someone (else) should hire you". Skip writing the bullshit related work section and instead clearly explain what you do differently and what you learned from it.
 
-**Goal 3**: I want people to give a crap about incrementally maintaining graph computations. This may look self-serving because differential dataflow does this, but I'd love for anyone else to be working in this space.
+**Goal 3**: I want people to give a crap about incrementally maintaining graph computations. This may look self-serving because differential dataflow does this, but I'd love for anyone else to be working in this space. I have no reason to believe this is useful for anything other than the US government being even more disappointing than it already is, but I'd love to be corrected.
