--- a/posts/2015-12-24.md
+++ b/posts/2015-12-24.md
@@ -210,10 +210,10 @@ Obviously some times asynchrony is going to be important. Timely dataflow progre
 
 Let's be clear, all the research to be published in 2016 has already been done and written by this point. Nonetheless, ima explain three things I think it would be nice to see. 
 
-As a fun exercise, perhaps you could write down what you think would constitute progress?
-
 **Goal 1**: I want to see algorithms I don't expect to see. I want to see computations and approaches that are suprising and new and thought provoking. I want more papers where my conclusion is "I *need* to try that out in timely" rather than "I already wrote that in [timely / your 2nd favorite system]".
 
-**Goal 2**: I want people to explain their papers as if they were scientists rather than salesmen. I don't care *that* your system goes 10x faster than some other system, I care about *why* it goes 10x faster. I want to know if there is anything to learn here other than "someone (else) should hire you". Skip writing the bullshit related work section and instead clearly explain what you do differently and what you learned from it.
+**Goal 2**: I want people to explain their papers as if they were scientists rather than salesmen. I don't care *that* your system goes 10x faster than some other system, I care about *why* it goes 10x faster. I want to know if there is anything to learn here other than "someone (else) should hire you". Skip writing a bullshit related work section and instead clearly explain what you do differently and what you learned from it.
 
 **Goal 3**: I want people to give a crap about incrementally maintaining graph computations. This may look self-serving because differential dataflow does this, but I'd love for anyone else to be working in this space. I have no reason to believe this is useful for anything other than the US government being even more disappointing than it already is, but I'd love to be corrected.
+
+As a fun exercise, perhaps you could write down what you think would constitute progress? What's missing and what needs to get done next?
