--- a/posts/2015-12-24.md
+++ b/posts/2015-12-24.md
@@ -8,7 +8,7 @@ Here are my thoughts on why the area isn't making very much progress, and is in 
 
 As 2015 draws to a close, research published at top venues are still targeting pretty much pagerank, connected components via label propagation, and breadth-first distance labeling. The research in graph processing systems has (to my reading) largely focused on these problems as their core evaluation metrics, and consequently worked primarily to improve their performance on these problems. Are these algorithms actually "representative graph problems", like the papers claim, and should we continue to improve the performance of these algorithms, assuming good general graph processing will come out of this work?
 
-No. These algorithms are not representative of graph processing problems. Rather, they are representative of algorithms that can be expressed in the lowest-common-denominator system. These three algorithms (and minor variations) are ubiquitous because they are easy. All graph processing systems can implement these algorithms, so in order to "have a fair comparison", a requirement of getting most papers published, you have to restrict your attention to this sort of problem. 
+No. These algorithms are not representative of graph processing problems. Rather, they are representative of algorithms that can be expressed in the lowest-common-denominator systems. These three algorithms (and minor variations) are ubiquitous because they are easy. All graph processing systems can implement these algorithms, so in order to "have a fair comparison", a requirement of getting most papers published, you have to restrict your attention to this sort of problem. 
 
 By fixating only on the easiest of problems, researchers spiral into over-optimized and under-capable systems. That is my view of the main issue with graph processing research at the moment, but it shows up a few different ways.
 
@@ -184,7 +184,7 @@ Not to mention that the prioritized version has a clear functional definition th
 
 Lol, wut?
 
-This might be a bit of a surprise, but when we first did differential dataflow, back before anyone would publish it, it was a totally asynchronous system. The update rules allow updates at arbitrary logical times, and each operator can always respond with the appropriate output updates. You could just move a bit of logic around in [the current implementation](https://github.com/frankmcsherry/differential-dataflow) and make it asynchronous again!
+This might be a bit of a surprise, but when we first did differential dataflow, back before anyone would publish it, it was a totally asynchronous system. The update rules allow updates at arbitrary logical times, and each operator can always respond with the appropriate output updates no matter what order they arrive in. You could just move a bit of logic around in [the current implementation](https://github.com/frankmcsherry/differential-dataflow) and make it asynchronous again! Please don't.
 
 We added synchronization because it went faster with synchronization.
 
@@ -192,15 +192,15 @@ Two things happen when you run differential dataflow that don't happen to the sa
 
 1.  You send a bunch of speculative records that need to be corrected. 
 
-    Perhaps some of the records are correct and giving other workers a head start makes sense (we thought this would be true), but there was enough incorrectness that the work done in correcting them overwhelmed any gains.
+    Perhaps some of the records are correct and giving other workers a head start makes sense. We thought this would be true, but there were enough incorrect records that the work done in correcting them overwhelmed any gains. This was something that Wang et al observed in one of their other workloads, a least-common-ancestor computation, and something I expect you would see more of the more sophisticated your computation gets.
 
 2.  With non-monotonic operators, you risk non-termination.
 
-    Differential dataflow updates can cancel, but to do so they have to be present in the same place at the same time. If one update is first propagated and then canceled, a new cancelation needs to chase the update down. In an iterative computation this may never happen, with `+` and `-` instances of a record circulating in a loop trying to meet up.
+    Differential dataflow updates can cancel, but to do so they have to be present in the same place at the same time. If one update is first propagated and then canceled, a new cancelation needs to chase the update down. In an iterative computation this may never happen, with `+` and `-` instances of a record circulating in a loop trying to meet up. Fortunately, this is a non-issue in simple computations.
 
 There are other horrible issues, like if you speculatively start executing an iterative computation with bad input (for example, graph coloring above with edges that don't point from large id to small id), you may diverge and exhaust resources before you learn "lol my bad; edge was wrong". Although the math says what to correct, you've already run out of memory and exited.
 
-**Recommendation 3**: Authors need to argue more clearly that asynchronous graph processing, as in "without synchronization", is not a mis-feature. 
+**Recommendation 3**: Authors need to argue that asynchronous graph processing, as in "without synchronization", is not a mis-feature. 
 
 In many cases it seems that one can identify the improvements asynchronicity makes to your synchronous computation and incorporate them into the synchronous algorithm, gaining a clearer specification of what you compute and occasionally even improved running times.
 
