--- a/posts/2015-12-24.md
+++ b/posts/2015-12-24.md
@@ -172,13 +172,13 @@ As best as I can see, there are few papers recently re-discovering that asynchro
 
 2. Async can also go much slower than sync, if you use the wrong scheduler to determine what data to work on next. 
 
-The analysis makes sense, that one of their rules circulates smaller ids faster than larger ones (the rules are like: "prefer to work on this input over that input", where one input is roughly the "successfully propagated labels" input).
+The analysis makes sense, in that one of their rules circulates smaller ids faster than larger ones (the rules are like: "prefer to work on this input over that input", where one input is roughly the "successfully propagated labels" input), and their other rules don't.
 
-Why not just make it part of the program, rather than a vagary of the scheduler? Their asynchronous execution got about 2x over non-prioritized synchronous, whereas synchronous prioritized execution got us (a totally different system, to be clear) about 5x end-to-end. 
+Why not just make the prioritization part of the program, rather than a vagary of the scheduler? Their asynchronous execution got about 2x over non-prioritized synchronous, whereas synchronous prioritized execution got us (a totally different system, to be clear) about 5x end-to-end. 
 
-It seems a bit early to call it in favor of asynchronous systems yet (which is actually one of Wang et al's conclusions, too).
+It seems a bit early to call it in favor of asynchronous systems yet (which is one of Wang et al's conclusions, too, but I wish they would have compared with syncronous prioritized execution as well).
 
-Not to mention that the prioritized version has a clear functional definition that allows us to write it in differential dataflow, and incrementally update it (something I think the async systems are really bad at).
+Not to mention that the prioritized version has a clear functional definition that allows us to write it in differential dataflow, and incrementally update it (something the async systems are really bad at).
 
 #### Differential dataflow
 
