--- a/posts/2015-12-24.md
+++ b/posts/2015-12-24.md
@@ -6,7 +6,7 @@ Here are my thoughts on why the area isn't making very much progress, and is in 
 
 ---
 
-As 2015 draws to a close, research published at top venues are still targeting pretty much pagerank, connected components via label propagation, and breadth-first distance labeling. The research in graph processing systems has (to my reading) largely focused on these problems as their core evaluation metrics, and consequently worked primarily to improve their performance on these problems. Are these algorithms actually "representative graph problems", like the papers claim, and should we continue to improve the performance of these algorithms, assuming good general graph processing will come out of this work?
+As 2015 draws to a close, the research published at top venues still targets pretty much pagerank, connected components via label propagation, and breadth-first distance labeling. The research in graph processing systems has (to my reading) largely focused on these problems as their core evaluation metrics, and consequently worked primarily to improve their performance on these problems. Are these algorithms actually "representative graph problems", like the papers claim, and should we continue to improve the performance of these algorithms, assuming good general graph processing will come out of this work?
 
 No. These algorithms are not representative of graph processing problems. Rather, they are representative of algorithms that can be expressed in the lowest-common-denominator systems. These three algorithms (and minor variations) are ubiquitous because they are easy. All graph processing systems can implement these algorithms, so in order to "have a fair comparison", a requirement of getting most papers published, you have to restrict your attention to this sort of problem. 
 
