--- a/posts/2015-12-24.md
+++ b/posts/2015-12-24.md
@@ -22,7 +22,7 @@ Being a crap algorithm isn't the worst thing. This algorithm came to popularity 
 
 The issue with crap algorithms is when they become benchmark computations for research areas. 
 
-For an alternate approach, consider the [graph500 benchmark](http://www.graph500.org), originally conceived as a way to evaluate a memory subsystem. The benchmark requires one to compute the breadth-first distances and labels for a class of random graphs, and report the elapsed time. Presumably the original assumption was that folks would use breadth-first graph traversal, which exercised the memory subsystem in the way the benchmark authors intended (a mix of batch and pointer chasing). 
+For an alternate approach, consider the [graph500 benchmark](http://www.graph500.org), originally conceived as a way to evaluate memory subsystems. The benchmark requires one to compute the breadth-first distances and labels for a class of random graphs, and report the elapsed time. Presumably the original assumption was that folks would use breadth-first graph traversal, which exercised the memory subsystem in the way the benchmark authors intended (a mix of bulk memory access and pointer chasing). 
 
 However, in my mind the most interesting thing to happen with graph500 was [Scott Beamer](http://www.cs.berkeley.edu/~sbeamer/research.html) and friends observing that a tweaked algorithm could traverse fewer edges, accomplishing the same result but moving less data over the memory subsystem. Because the benchmark only requires the result, not a specific implementation, research and progress happened.
 
